--- a/Employee Manager/employee_register/templates/employee_register/employee_list.html
+++ b/Employee Manager/employee_register/templates/employee_register/employee_list.html
@@ -1,6 +1,23 @@
 {% extends "employee_register/base.html" %}
 
 {% block content %}
-<p>we'll show a list of employee from the table</p>
+<table class="table table-borderless">
+    <thead>
+        <tr>
+            <td>Full Name</td>
+            <td>Mobile</td>
+            <td>Position</td>
+        </tr>
+    </thead>
+    <tbody>
+        {% for employee in employee_list %}
+        <tr>
+            <td>{{employee.fullname}}</td>
+            <td>{{employee.mobile}}</td>
+            <td>{{employee.position}}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock content %}
 
